--- a/css/layout.css
+++ b/css/layout.css
@@ -49,6 +49,11 @@ body {
     clear: both;
     overflow: hidden;
 }
+#logo a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
 
 #header_right {
     float: right;
