--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,6 @@ body {
     text-decoration: none;
 }
 
-#permaliens .recherche {
-    text-align: right;
-}
-
 #permaliens input {
     border: 1px solid black;
     height: 1.5em;
@@ -146,20 +142,20 @@ body.secteur5 .cartouche {
 }
 
 
-body.secteur2 #main h3,
-body.secteur2 #main .to_top {
+body.secteur2 h3,
+body.secteur2 .to_top {
     color: #7e1713;
 }
-body.secteur3 #main h3,
-body.secteur3 #main .to_top {
+body.secteur3 h3,
+body.secteur3 .to_top {
     color: #ff5000;
 }
-body.secteur4 #main h3,
-body.secteur4 #main .to_top {
+body.secteur4 h3,
+body.secteur4 .to_top {
     color: #aeae00;
 }
-body.secteur5 #main h3,
-body.secteur5 #main .to_top {
+body.secteur5 h3,
+body.secteur5 .to_top {
     color: #2999d9;
 }
 
@@ -177,7 +173,7 @@ body.secteur5 #main .to_top {
     text-transform: uppercase;
     text-align: center;
     margin: 0.6em 0px 0.3em 0px;
-    color: white;
+    color: white !important;
 }
 .aside ul {
     padding-left: 1em;
