--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,9 @@ body {
 }
 
 #permaliens li {
-    border-left: 2px solid white;
+    border-left: 1px solid white;
 }
-#permaliens li:first-child { border-left: 0px; }
+#permaliens li:last-child { border-left: 0px; }
 
 #permaliens a {
     font-size: 1.2em;
