--- a/css/style.css
+++ b/css/style.css
@@ -192,13 +192,16 @@ body.secteur5 .to_top {
 #footer .border_top,
 #footer .border_bottom {
     background-color: black;
+    text-transform: uppercase;
+}
+#footer .border_bottom .red {
+    color: #a31815;
 }
 
 #footer_content > ul > li > span {
     font-weight: bold;
     text-transform: uppercase;
     background-color: rgba(0,0,0,0.5);
-    text-align: center;
 }
 
 #footer a {
