Logo round corners & page border top

--- a/css/content.css
+++ b/css/content.css
@@ -8,6 +8,7 @@ body {
 
 #logo {
     background: url("img/logo.png") no-repeat center center white; 
+    border-radius: 12px;
 }
 
 #activites .img {
