--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ body.secteur5 .to_top {
 // Footer
 */
 
-#footer { font-size: 0.8em; }
+#footer { font-size: 0.8em; line-height: normal; }
 #footer .border_top,
 #footer .border_bottom {
     background-color: black;
