--- a/css/layout.css
+++ b/css/layout.css
@@ -140,7 +140,7 @@ body {
 */
 
 #footer {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 #footer .border_top {
@@ -148,21 +148,20 @@ body {
 }
 
 #footer_content {
-    /* padding: 1em 0px 2em 0px; */
 }
 
 #footer_content > ul > li {
-    width: 20%;
+    min-width: 20%;
 }
 
 #footer_content > ul > li > span {
     display: block;
-    padding: 0.5em 0.5em 0px 0.5em;
+    padding: 0.5em 0.5em 0px 12px;
     margin-bottom: 0.5em;
 }
 
 #footer_content > ul > li > ul {
-    padding: 0px 5px 0.5em 20px;
+    padding: 0px 10px 0.5em 25px;
     list-style: disc;
 }
 
