--- a/css/layout.css
+++ b/css/layout.css
@@ -200,5 +200,5 @@ body {
 #activites > ul > li { margin: 0px; width: 30%; }
 #footer_content > ul, #permaliens > ul { display: block; padding: 0px; }
 #footer_content > ul > li { display: block; width: inherit; }
-#permaliens > ul > li { display: inline-block; text-align: left; border: 0px }
+#permaliens > ul > li { display: inline-block; text-align: left; border: 0px; width: auto; padding: 0px 10px; }
 }
