--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,12 @@ body {
 }
 
 
+.pagination {
+    margin-top: 10px;
+    background-color: black;
+    text-align: center;
+}
+
 /*
 // Header
 */
