--- a/css/layout.css
+++ b/css/layout.css
@@ -73,6 +73,7 @@ body {
 
 #activites ul {
     padding: 0px;
+    margin: 0px;
 }
 
 #activites ul li {
@@ -150,7 +151,7 @@ body {
 }
 
 #footer_content > ul > li {
-    min-width: 20%;
+    width: 25%;
 }
 
 #footer_content > ul > li > span {
